--- a/style.css
+++ b/style.css
@@ -243,15 +243,36 @@ body {
 
 #page2-part2 {
     height: 100%;
-    width: 45%;
+    width: 50%;
+    background-color: aqua;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+
    
 }
 
 #page2-part2 img{
-    height: 70%;    
+    height: 70%;
+    width: 60%;
+    margin-right: 10px;    
+    display: flex;
+    
  
 }
- 
+
+.page2-part2-text {
+    width: 100%;
+    height: 30%;
+    background-color: red;
+}
+
+.page2-part2-text h1 {
+    width: 40%;
+    height: 100%;
+    background-color: green;
+}
+
 #page3{
     height: 100%;
     width: 100%;
